completed lab 04 requirments

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,37 +1,29 @@
 @media (min-width: 768px) {
     body{
-        width: 960px;
-        height: 768px;
-        border: solid  gray 1px;
-        margin: 40px auto;
-
+        width: 100%;
+        height: 768;
+        margin: 0 auto;
     }
     main{
-        background-color: #eee;
-
-    }
-     header div {
-         height: 65px;
-         background-color: #eee;
-
-     }
-    
-    .a {
         width: 100%;
+        height: 768;
+        margin: 40px 150px;
+    }
+    .second {
+        display: flex;
+        flex-direction: row;
+    }
+    .a {
+        width: 960px;
         height: 100px;
         text-align: center;
+        border: solid  gray 1px;
+        border-bottom: none;
     }
-
-    .b, .c, .d, .e, .f, .g, .h, .i{
-        background-color: #eee;
-    }
-
     .b{
         width: 200px;
         height: 600px;
-        float: left;
-        border-right:solid  gray 1px ;
-        border-top: solid  gray 1px;
+        border:solid  gray 1px;
     }
     .c{
         width: 380px;
@@ -39,20 +31,11 @@
         border-bottom: solid  gray 1px;
         border-right: solid  gray 1px;
         border-top: solid  gray 1px;
-        float: left;
-
-        
     }
     .d{
         width: 380px;
         height: 200px;
         border: solid  gray 1px;
-        float: right;
-        bottom: 200px;
-        position: relative;
-        left: 1.5px;
-
-
     }
     
     .e , .f, .g, .h{
@@ -60,100 +43,82 @@
         width: 190px;
         border-right: solid  gray 1px;
         border-bottom: solid  gray 1px;
-        float: left;   
     }
-    .f , .g, .h{
-        position: relative;
-        bottom: 200px;
-    }
-    .h{
-        left: 769px;
-        bottom: 450px;
-        border-left:solid  gray 1px ;
-        
-    }
-
+    
     .i{
         width: 760px;
         height: 150px;
-        float: right;
         border-left: solid  gray 1px;
-        position: relative;
-        bottom: 200px;
-        left: 1.5px;
         border-right: solid  gray 1px;
-
+        border-bottom: solid  gray 1px;
     }
-    
+    .cd {
+        display: flex;
+        flex-direction: row;
+    }
+    .efgh{
+        display: flex;
+        flex-direction: row;
+    }
 
+    .container{
+        display: flex;
+        flex-direction: row;
+    }
 }
 
 @media (max-width: 767px){
     body{
-        border: solid  rgb(155, 140, 140) 1px;
-        margin: 30px 10px;
+        width: 100%;
+        height: 768;
+        margin: 0 auto;
     }
     main{
-        background-color: #eee;
-
+        width: 100%;
+        height: 768;
+        margin: 40px 150px;
     }
     .a {
-        width: 100%;
+        width: 480px;
         height: 75px;
         text-align: center;
-        border-bottom: solid gray 1px;
+        border: solid gray 1px;
     }
-
     .b{
-        width: 100%;
+        width: 480px;
         height: 150px;
-
+        border-left: solid  gray 1px;
+        border-right: solid  gray 1px;
     }
     .c , .d {
-        width: 100%;
+        width: 480px;
         height: 125px;
-        border-bottom: solid  gray 1px;
-        border-top: solid  gray 1px;
-
+        border: solid  gray 1px;
         
     }
     .d{
         border-top: none;
+        border-left: solid  gray 1px;
+        border-right: solid  gray 1px;
     }
-
-
     .e, .f, .g, .h{
         width: 240px;
         height: 250px;
         border-right: solid  gray 1px;
         border-bottom: solid  gray 1px;
     }
-    .f {
-        position: relative;
-        left: 240px;
-        bottom: 250px;
+    .e ,.g{
+        border-left: solid  gray 1px;
     }
-    .g{
-        position: relative;
-        bottom: 250px;
+    .efgh{
+        display: flex;
+        flex-direction: column;
+        flex-flow: wrap;
     }
-    .h {
-        position: relative;
-        bottom: 500px;
-        left:240px;
-    }
-
-    
-    
     .i{
-        width: 100%;
+        width: 480px;
         height: 80px;
-        position: relative;
-        bottom: 450px;
-        border-bottom: solid gray 1px;
-
-        
+        border: solid gray 1px;
+        border-top: none; 
     }
-    
-
 }
