--- a/css/module.css
+++ b/css/module.css
@@ -3,6 +3,7 @@
         text-align: center;
     }
     .a p{ 
+        text-align: center;
         padding-top: 35px;
     }
 
@@ -22,6 +23,7 @@
     .i p{
         padding-top: 55px;
     }
+    
 
 }
 
